--- a/visual/main.css
+++ b/visual/main.css
@@ -5,6 +5,7 @@ body {
 }
 
 input[type="radio"] {
+    cursor: pointer;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -26,6 +27,7 @@ h1, h2, h3, h4, h5, h6 {
     color: #fff;
     border-radius: 8px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+    cursor: default;
 }
 
 #algorithm_panel {
@@ -45,6 +47,7 @@ button {
     border-radius: 5px;
     padding: 2px 10px;
     font-size: 90%;
+    cursor: pointer;
 }
 
 button:hover {
