mod: separating js files for demo page

--- a/visual/main.css
+++ b/visual/main.css
@@ -18,6 +18,7 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 120%;
     font-weight: bold;
     padding-bottom: 5px;
+    margin-top: -10px;
 }
 
 .control_panel {
