--- a/visual/main.css
+++ b/visual/main.css
@@ -31,6 +31,11 @@ h1, h2, h3, h4, h5, h6 {
     cursor: default;
 }
 
+.option_header {
+    font-size: 80%;
+    margin-left: 20px;
+}
+
 #algorithm_panel {
     width: 250px;
     right: 40px;
@@ -65,11 +70,9 @@ button:hover {
 }
 
 .sub_options {
-    border-bottom: solid 1px #777;
-    border-top: solid 1px #777;
-    padding: 5px;
+    padding: 2px;
     font-size: 90%;
-    margin: 2px 30px;
+    margin: 2px 30px 0;
 }
 
 #timer {
@@ -79,4 +82,20 @@ button:hover {
     color: #0a0;
     font-size: 70%;
     display: none;
+}
+
+a {
+    color: #33f;
+}
+
+footer {
+    color: #333;
+    font-size: 70%;
+    text-align: center;
+    position: absolute;
+    width: 200px;
+    bottom: 20px;
+    left: 50%;
+    margin-left: -100px;
+    background: rgba(255, 255, 255, 0.3);
 }
