fix: show control panel only after the page is fully loaded

--- a/visual/main.css
+++ b/visual/main.css
@@ -29,6 +29,7 @@ h1, h2, h3, h4, h5, h6 {
     border-radius: 8px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
     cursor: default;
+    display: none;
 }
 
 .option_header {
