--- a/visual/main.css
+++ b/visual/main.css
@@ -78,11 +78,14 @@ button:hover {
 
 #timer {
     position: absolute;
-    bottom: 20px;
+    bottom: 10px;
     left: 20px;
     color: #0a0;
     font-size: 70%;
+    padding: 5px;
     display: none;
+    background: rgba(255, 255, 255, 0.5);
+    border-radius: 5px;
 }
 
 a {
@@ -95,8 +98,10 @@ footer {
     text-align: center;
     position: absolute;
     width: 200px;
-    bottom: 20px;
+    bottom: 10px;
     left: 50%;
     margin-left: -100px;
-    background: rgba(255, 255, 255, 0.3);
+    background: rgba(255, 255, 255, 0.5);
+    padding: 5px;
+    border-radius: 5px;
 }
