--- a/visual/main.css
+++ b/visual/main.css
@@ -39,13 +39,32 @@ h1, h2, h3, h4, h5, h6 {
 
 #algorithm_panel {
     width: 250px;
-    right: 40px;
-    top: 40px;
+    right: 20px;
+    top: 20px;
 }
 
 #play_panel {
     width: 250px;
-    right: 40px;
+    right: 20px;
+}
+
+#help_panel {
+    top: 20px;
+    left: 20px;
+}
+
+
+#hide_instruction {
+    position: absolute;
+    right: 25px;
+    top: 10px;
+    font-size: 90%;
+    cursor: pointer;
+}
+
+#hide_instruction:hover {
+    color: #fff;
+    text-decoration: underline;
 }
 
 button {
@@ -105,4 +124,16 @@ footer {
     background: rgba(255, 255, 255, 0.5);
     padding: 5px;
     border-radius: 5px;
+}
+
+.white {
+    color: #fff;
+}
+
+.green {
+    color: #0d0;
+}
+
+.red {
+    color: #e40;
 }
