--- a/visual/main.css
+++ b/visual/main.css
@@ -37,6 +37,10 @@ h1, h2, h3, h4, h5, h6 {
     margin-left: 20px;
 }
 
+.option_label {
+    cursor: pointer;
+}
+
 #algorithm_panel {
     width: 250px;
     right: 20px;
